# SeaHorse

./: .gitignore  .gitmodules  README.md
.github/workflows/: seahorse-next-wheels.yml  seahorse-wheels.yml
seahorse/: CMakeLists.txt  README.md  pyproject.toml
seahorse-old/: Makefile  README.md  seahorse.hpp
seahorse-old/gui/: GuiComponents.cpp  gui.cpp
seahorse-old/gui/resources/: UbuntuMonoBold.hpp
seahorse-old/include/Optimisation/: GRAFS.hpp  GRAPE.hpp  Optimiser.hpp  dCRAB.hpp
seahorse-old/include/Optimisation/Basis/: Basis.hpp
seahorse-old/include/Optimisation/Cost/: ControlCost.hpp  Cost.hpp  EvaluatedControl.hpp  StateTransferCost.hpp
seahorse-old/include/Optimisation/Stopper/: StopComponent.hpp  Stopper.hpp
seahorse-old/include/Physics/: Hamiltonian.hpp  HilbertSpace.hpp  Potential.hpp  Spline.hpp  SplitStepper.hpp  Stepper.hpp
seahorse-old/include/Utils/: Random.hpp  Timer.hpp
seahorse-old/projects/: gkp_states.cpp  main.cpp  test.cpp
seahorse-old/src/Json/: json.hpp  nlohmann_json.hpp
seahorse-old/src/Optimisation/: GRAPE.cpp  Optimiser.cpp  dCRAB.cpp
seahorse-old/src/Optimisation/Basis/: Basis.cpp
seahorse-old/src/Optimisation/Cost/: ControlCost.cpp  Cost.cpp  StateTransferCost.cpp
seahorse-old/src/Optimisation/Stopper/: StopComponent.cpp  Stopper.cpp
seahorse-old/src/Physics/: Hamiltonian.cpp  HilbertSpace.cpp  Potential.cpp  Spline.cpp  SplitStepper.cpp  Stepper.cpp  Time.hpp  Vectors.hpp
seahorse-old/src/Utils/: Globals.hpp  Includer.hpp  Logger.hpp  Random.cpp  Timer.cpp  TypeName.hpp
seahorse/examples/: minimal.py  port_gkp_states.py  quick_demo.ipynb  wheel_demo.py
seahorse/scripts/: _common.sh  build_and_install_local.sh  build_wheel.sh  install_editable.sh  rebuild_native.sh  test.sh
seahorse/src/cpp/bindings/: module.cpp
seahorse/src/cpp/core/: grid.cpp  objective.cpp  objective.hpp  potential.cpp  potential.hpp  propagator.cpp  propagator.hpp  spectrum.cpp  spectrum.hpp
seahorse/src/python/seahorse/: __init__.py  api.py  basis.py  objective.py  optimise.py  potentials.py  types.py
seahorse/tests/python/: conftest.py  test_api.py  test_basis.py  test_docstrings.py  test_native_integration.py  test_objective.py  test_optimise.py  test_potentials.py  test_public_api.py  test_types.py
seahorse_next/: CMakeLists.txt  README.md  pyproject.toml
seahorse_next/src/cpp/bindings/: module.cpp
seahorse_next/src/cpp/core/: grid.hpp  potential.cpp  propagator.cpp  spectrum.cpp  spectrum.hpp  types.hpp
seahorse_next/src/python/seahorse/: __init__.py  api.py  basis.py  optimise.py  potentials.py  types.py
seahorse_next/tests/python/: test_basis.py
