[build-system]
requires = [
  "cmake>=3.21",
  "nanobind>=2.4",
  "scikit-build-core>=0.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "seahorse"
version = "0.1.0"
description = "Python-first quantum spatial simulation and optimisation with a nanobind-powered C++ core."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "SeaHorse contributors" },
]
dependencies = [
  "numpy>=1.23",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = [
  "cmake>=3.21",
  "mypy>=1.11",
  "nanobind>=2.4",
  "pytest>=8.0",
  "ruff>=0.6",
  "scikit-build-core>=0.10",
]

[tool.ruff]
src = ["src/python", "tests/python", "examples"]

[tool.ruff.lint.isort]
known-first-party = ["seahorse"]

[tool.mypy]
files = ["src/python", "tests/python", "examples"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src/python"
explicit_package_bases = true

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.source-dir = "."
wheel.packages = ["src/python/seahorse"]

[tool.scikit-build.editable]
mode = "inplace"
verbose = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
  "tests/python",
]
markers = [
  "native: exercises the compiled nanobind extension when available",
]
